<resources>
  <string name="app_name" translatable="false">SmartCookieWeb Preview</string>
  <string name="url_project" translatable="false">https://github.com/CookieJarApps/SmartCookieWeb-preview</string>
  <string name="key_javascript_enabled" translatable="false">javascript_enabled</string>
  <string name="key_app_theme_type" translatable="false">app_theme_type</string>
  <string name="key_web_theme_type" translatable="false">web_theme_type</string>
  <string name="key_search_engine" translatable="false">search_engine</string>
  <string name="key_show_addons_in_bar" translatable="false">show_addons_in_bar</string>
  <string name="key_bar_addon_list" translatable="false">bar_addons_list</string>
  <string name="key_clear_tabs" translatable="false">clear_tabs</string>
  <string name="key_clear_history" translatable="false">clear_history</string>
  <string name="key_clear_cookies" translatable="false">clear_cookies</string>
  <string name="key_clear_cache" translatable="false">clear_cache</string>
  <string name="key_clear_permissions" translatable="false">clear_permissions</string>
  <string name="key_homepage_type" translatable="false">homepage_type</string>
  <string name="key_move_navbar" translatable="false">move_navbar</string>
  <string name="key_use_custom_collection" translatable="false">use_custom_collection</string>
  <string name="key_collection_name" translatable="false">collection_name</string>
  <string name="key_collection_user" translatable="false">collection_user</string>
  <string name="key_auto_font_size" translatable="false">auto_font_size</string>
  <string name="key_font_size_factor" translatable="false">font_size_factor</string>
  <string name="key_hide_url_bar" translatable="false">hide_url_bar</string>
  <string name="key_swap_drawers" translatable="false">swap_drawers</string>
  <string name="key_stack_from_bottom" translatable="false">stack_from_bottom</string>
  <string name="key_show_tabs_in_grid" translatable="false">show_tabs_in_grid</string>
  <string name="key_sideload_xpi" translatable="false">sideload_xpi</string>
  <string name="key_swipe_refresh" translatable="false">swipe_refresh</string>
  <string name="key_remote_debugging" translatable="false">remote_debugging</string>
  <string name="key_export_bookmarks" translatable="false">export_bookmarks</string>
  <string name="key_import_bookmarks" translatable="false">import_bookmarks</string>
  <string name="key_export_settings" translatable="false">export_settings</string>
  <string name="key_import_settings" translatable="false">import_settings</string>
  <string name="key_clear_settings" translatable="false">clear_settings</string>
  <string name="key_prompt_external_downloader" translatable="false">prompt_external_downloader</string>
  <string name="key_show_protocol" translatable="false">show_url_protocol</string>
  <string name="key_search_suggestions_enabled" translatable="false">search_suggestions_enabled</string>
  <string name="key_safe_browsing" translatable="false">safe_browsing</string>
  <string name="key_shortcuts_visible" translatable="false">shortcuts_visible</string>
  <string name="key_news_visible" translatable="false">news_visible</string>
  <string name="key_tracking_protection" translatable="false">tracking_protection</string>
  <string name="key_trust_third_party_certs" translatable="false">trust_third_party_certs</string>
  <string name="key_homepage_background_image" translatable="false">homepage_background_image</string>
  <string name="key_load_shortcut_icons" translatable="false">load_shortcut_icons</string>
  <string name="key_clear_bookmarks" translatable="false">clear_bookmarks</string>
  <string name="more">More Info</string>
  <string name="version">Application version</string>
  <string name="licenses">Open Source Licenses</string>
  <string name="mpl_license">Mozilla Public License 2.0</string>
  <string name="apache">Apache License 2.0</string>
  <string name="freeware">Freeware</string>
  <string name="mozac">Mozilla Android Components</string>
  <string name="android_open_source_project">Android Open Source Project</string>
  <string name="geckoview">GeckoView</string>
  <string name="license_gnu">GNU Lesser General Public License</string>
  <string name="license_gpl">GNU General Public License</string>
  <string name="no_ads">No ads or trackers</string>
  <string name="infinity">∞</string>
  <string name="custom">Custom</string>
  <string name="tabs">Tabs</string>
  <string name="tab_grid">Show tabs in grid</string>
  <string name="action_print">Print</string>
  <string name="action_add_to_homescreen">Add to home screen</string>
  <string name="action_history">History</string>
  <string name="action_bookmarks">Bookmarks</string>
  <string name="action_downloads">Downloads</string>
  <string name="action_add_bookmark">Add bookmark</string>
  <string name="action_copy">Copy link</string>
  <string name="forward">Forward</string>
  <string name="reload">Reload</string>
  <string name="settings">Settings</string>
  <string name="new_tab">New tab</string>
  <string name="duplicate_tab">Duplicate tab</string>
  <string name="move_to_private">Move to private mode</string>
  <string name="move_to_normal">Move to normal mode</string>
  <string name="close_tab">Close tab</string>
  <string name="desktop_mode">Desktop site</string>
  <string name="wait">Wait</string>
  <string name="stop">Stop</string>
  <string name="install">Install</string>
  <string name="cancel">Cancel</string>
  <string name="export_bookmarks">Export bookmarks to backup</string>
  <string name="import_backup">Import bookmarks from backup</string>
  <string name="clear_bookmarks">Clear bookmarks</string>
  <string name="clear_bookmarks_confirm">Are you sure you want to clear all bookmarks?</string>
  <string name="export_tabs">Export tabs to backup</string>
  <string name="import_tabs">Import tabs from backup</string>
  <string name="settings_general">General settings</string>
  <string name="settings_general_explain">JavaScript…</string>
  <string name="settings_privacy_and_security">Privacy and security settings</string>
  <string name="settings_privacy_and_security_explain">Clear history…</string>
  <string name="settings_import_and_export">Import and export settings</string>
  <string name="settings_import_and_export_explain">Exporting and importing…</string>
  <string name="settings_customization">Customization settings</string>
  <string name="settings_customization_explain">App theme, bottom navbar…</string>
  <string name="settings_advanced">Advanced settings</string>
  <string name="settings_advanced_explain">Add-on collection…</string>
  <string name="settings_addons">Add-on settings</string>
  <string name="settings_addons_explain">Enable add-ons, remove add-ons…</string>
  <string name="settings_about">About</string>
  <string name="settings_about_explain">App version, open source licenses…</string>
  <string name="dark_mode">Web dark mode</string>
  <string name="dark_mode_summary">Darkens supported websites</string>
  <string name="follow_system">Follow system theme</string>
  <string name="follow_system_summary">Darkens browser UI when system dark mode is enabled</string>
  <string name="javascript_enabled">Enable JavaScript</string>
  <string name="clear_tabs">Clear open tabs</string>
  <string name="clear_history">Clear browsing history and site data</string>
  <string name="clear_cookies">Clear cookies</string>
  <string name="clear_cache">Clear cache</string>
  <string name="clear_permissions">Clear permissions</string>
  <string name="sites">(%1$s) sites</string>
  <string name="app_restart">Please restart the app for the change to take effect.</string>
  <string name="mozac_reader_view_description">Enable Reader View</string>
  <string name="mozac_reader_view_description_selected">Disable Reader View</string>
  <string name="other_addons">Other add-ons</string>
  <string name="all_extensions">All extensions</string>
  <string name="tab_removed">Tab removed</string>
  <string name="undo">Undo</string>
  <string name="hide_url_bar">Hide URL bar while scrolling</string>
  <string name="search">Search</string>
  <string name="no_results">No results</string>
  <string name="bookmark">Bookmark</string>
  <string name="title">Title</string>
  <string name="url">URL</string>
  <string name="folder">Folder</string>
  <string name="add_to_top">Add at top of list</string>
  <string name="add_bookmark">Add bookmark</string>
  <string name="edit_bookmark">Edit bookmark</string>
  <string name="remove_history_item">Remove history item</string>
  <string name="edit_folder">Edit folder</string>
  <string name="add_folder">Add folder</string>
  <string name="new_folder_name">New folder</string>
  <string name="url_empty_mes">URL empty!</string>
  <string name="title_empty_mes">Title empty!</string>
  <string name="sort">Sort</string>
  <string name="sort_rating">Rating</string>
  <string name="sort_a_z">A-Z</string>
  <string name="sort_z_a">Z-A</string>
  <string name="select_this_item">Select this item</string>
  <string name="move_bookmark">Move to folder</string>
  <string name="open_all_new">Open all in new tabs</string>
  <string name="open_all_bg">Open all in background tabs</string>
  <string name="delete_bookmark">Delete bookmark</string>
  <string name="delete_folder">Delete folder</string>
  <string name="open">Open</string>
  <string name="open_new">Open in new tab</string>
  <string name="open_new_private">Open in new private tab</string>
  <string name="open_bg">Open in background tab</string>
  <string name="confirm">Are you sure you want to delete this item?</string>
  <string name="start_sort">Sorting</string>
  <string name="end_sort">Not sorting</string>
  <string name="successful">Successful</string>
  <string name="failed">Failed</string>
  <string name="search_engine">Search engine</string>
  <string name="fill_from_clipboard">Fill from clipboard</string>
  <string name="copy">Copy</string>
  <string name="paste">Paste</string>
  <string name="paste_and_go">Paste and go</string>
  <string name="copied">Copied to clipboard</string>
  <string name="loading_addons">Loading add-ons…</string>
  <string name="loading">Loading…</string>
  <string name="tabs_cleared">Tabs cleared!</string>
  <string name="history_cleared">History cleared!</string>
  <string name="cookies_cleared">Cookies cleared!</string>
  <string name="cache_cleared">Cache cleared!</string>
  <string name="permissions_cleared">Permissions cleared!</string>
  <string name="show_addons_in_bar">Show add-ons in navbar</string>
  <string name="bar_addon_list">Navbar add-on list</string>
  <string name="shortcuts">Shortcuts</string>
  <string name="add_shortcut">Add shortcut</string>
  <string name="edit_shortcut">Edit shortcut</string>
  <string name="homepage_type">Homepage type</string>
  <string name="move_navbar">Move navbar to bottom</string>
  <string name="use_custom_collection">Use custom add-on collection</string>
  <string name="collection_user">Collection user</string>
  <string name="collection_name">Collection name</string>
  <string name="backup_bookmarks">Backup bookmarks</string>
  <string name="theme">App theme</string>
  <string name="theme_explain">The theme of the browser\'s UI elements.</string>
  <string name="web_theme">Web theme</string>
  <string name="web_theme_explain">The theme that the browser asks extensions and website to use.</string>
  <string name="load_xpi">Sideload XPI</string>
  <string name="remote_debugging">Remote debugging</string>
  <string name="export_settings">Export settings to backup</string>
  <string name="import_settings">Import settings from backup</string>
  <string name="clear_settings">Reset settings</string>
  <string name="backup_settings">Settings backup</string>
  <string name="prompt_external_downloader">Ask which app to use to download files</string>
  <string name="trust_third_party_certs">Trust third party CA certificates</string>
</resources>