<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/backup_bookmarks">
        <Preference
            android:key="@string/key_import_bookmarks"
            android:singleLineTitle="false"
            android:title="@string/import_backup"/>
        <Preference
            android:key="@string/key_export_bookmarks"
            android:singleLineTitle="false"
            android:title="@string/export_bookmarks"/>
        <Preference
            android:key="@string/key_clear_bookmarks"
            android:singleLineTitle="false"
            android:title="@string/clear_bookmarks"/>
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/backup_tabs">
        <Preference
            android:key="export_tab"
            android:singleLineTitle="false"
            android:title="@string/export_tabs"/>
        <Preference
            android:key="import_tab"
            android:singleLineTitle="false"
            android:title="@string/import_tabs"/>
    </PreferenceCategory>-->

    <PreferenceCategory android:title="@string/backup_settings">
        <Preference
            android:key="@string/key_import_settings"
            android:singleLineTitle="false"
            android:title="@string/import_settings"/>
        <Preference
            android:key="@string/key_export_settings"
            android:singleLineTitle="false"
            android:title="@string/export_settings"/>
        <Preference
            android:key="@string/key_clear_settings"
            android:singleLineTitle="false"
            android:title="@string/clear_settings"/>

    </PreferenceCategory>

</PreferenceScreen>