<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browser_toolbar_popup_window"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:background="@drawable/rounded_all_corners"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <Button
        android:id="@+id/copy"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:minWidth="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/copy"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/paste"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:minWidth="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/paste"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/paste_and_go"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/paste_and_go"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary" />
</LinearLayout>