<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:paddingTop="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text">

            <requestFocus />
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url"
            android:importantForAutofill="no"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/spinner_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/folderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/folder"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/folderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="12dp"
            android:textAlignment="textEnd"
            app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/addToTopCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_top"
        android:layout_marginTop="4dp"/>

</LinearLayout>